--- a/python_collections_2/python_cols_2.ipynb
+++ b/python_collections_2/python_cols_2.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "PyTT_03(1).ipynb",
+      "name": "PyTT_03.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -23,7 +23,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SiwBJ6_oHZB5",
-        "outputId": "6ac1571b-cdb4-4537-bb85-f67b7e0a926b"
+        "outputId": "8afc0f19-5498-4988-c4c6-1287532e5f3f"
       },
       "source": [
         "ids = {'user1': [213, 213, 213, 15, 213], \n",
@@ -37,7 +37,7 @@
         "\n",
         "print(ans)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -55,7 +55,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2ZARNIDsI1sC",
-        "outputId": "fdcf5e18-2532-465c-f7ef-3301a73adeb0"
+        "outputId": "e29567c5-3d0f-453c-d4e8-2d0a1890a94a"
       },
       "source": [
         "queries = [\n",
@@ -68,17 +68,17 @@
         "    'сериалы про спорт',\n",
         "]\n",
         "\n",
-        "res_dict = {}\n",
+        "resDict = {}\n",
         "for query in queries:\n",
         "  a = len(query.split(' '))\n",
-        "  if a in res_dict:\n",
-        "    res_dict[a] = res_dict[a]+1\n",
+        "  if a in resDict:\n",
+        "    resDict[a] = resDict[a]+1\n",
         "  else:\n",
-        "    res_dict[a] = 1\n",
-        "for key in res_dict.keys():\n",
-        "  print(\"Поисковых запросов, содержащих {0} слов(а): {1}%\".format(key, round(100*res_dict[key]/len(queries),2)))"
+        "    resDict[a] = 1\n",
+        "for key in resDict.keys():\n",
+        "  print(\"Поисковых запросов, содержащих {0} слов(а): {1}%\".format(key, round(100*resDict[key]/len(queries),2)))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +97,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lb7cLrxOLM_n",
-        "outputId": "bd487bc7-85e4-41a9-f3f8-ef5f1d903dd1"
+        "outputId": "805b62bd-b225-4ec3-aeb0-7a6c6699e271"
       },
       "source": [
         "results = {\n",
@@ -113,7 +113,7 @@
         "\n",
         "print(results)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +131,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YUcY_si6Mbh5",
-        "outputId": "592c2b83-b678-4d17-e787-91751a999ced"
+        "outputId": "25758696-3c3d-4ce1-b33c-b6f91d023ddf"
       },
       "source": [
         "import operator\n",
@@ -140,7 +140,7 @@
         "result = max(stats.items(), key = operator.itemgetter(1))\n",
         "print(\"Максимальный объем продаж на рекламном канале: \", result[0])"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,19 +158,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B6HBFxZyPBTD",
-        "outputId": "9fcd8462-a69a-40c9-cec1-6ed8d99a0d4f"
+        "outputId": "14769144-5540-4ea4-a21f-08dbfd404189"
       },
       "source": [
         "my_list = ['2018-01-01', 'yandex', 'cpc', 100]\n",
         "my_list = ['a', 'b', 'c', 'd', 'e', 'f']\n",
         "\n",
-        "dict_res = {my_list[-2]:my_list[-1]}\n",
+        "dictRes = {my_list[-2]:my_list[-1]}\n",
         "\n",
         "for k in range(len(my_list)-3,-1, -1):\n",
-        "  dict_res = {my_list[k] : dict_res}\n",
-        "print(dict_res)"
+        "  dictRes = {my_list[k] : dictRes}\n",
+        "print(dictRes)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +188,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "usyVjD3AQwTg",
-        "outputId": "543d6be4-648c-49f0-da6e-687a83b1c2e7"
+        "outputId": "a4a25197-c337-429e-93d9-acf2a339b65c"
       },
       "source": [
         "cook_book = {\n",
@@ -221,38 +221,38 @@
         "portions = int(input('Введите количество порций:'))\n",
         "for key, value in cook_book.items():\n",
         "  for ingridients in value:\n",
-        "    ing_name = ingridients['ingridient_name']\n",
-        "    ing_quan = ingridients['quantity']\n",
-        "    ing_mes = ingridients['measure']\n",
-        "    if ing_name in foods:\n",
-        "      foods[ing_name] = [foods[ing_name][0] + ing_quan*portions, ing_mes]\n",
+        "    ingName = (ingridients['ingridient_name'], ingridients['measure'])\n",
+        "    ingQuan = ingridients['quantity']\n",
+        "    if ingName in foods:\n",
+        "      foods[ingName] += ingQuan*portions\n",
         "    else:\n",
-        "      foods[ing_name] = [ing_quan*portions, ing_mes]\n",
+        "      foods[ingName] = ingQuan*portions\n",
         "\n",
         "for key, value in foods.items():\n",
-        "  print(\"{0}: {1} {2}\".format(key, value[0], value[1]))"
+        "  print(f\"{key[0].capitalize()}: {value} {key[1]}\")"
       ],
-      "execution_count": 16,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Введите количество порций:3\n",
-            "сыр: 210 гр\n",
-            "томаты: 66 гр\n",
-            "огурцы: 60 гр\n",
-            "маслины: 30 гр\n",
-            "оливковое масло: 60 мл\n",
-            "салат: 30 гр\n",
-            "перец: 60 гр\n",
-            "колбаса: 90 гр\n",
-            "бекон: 90 гр\n",
-            "оливки: 30 гр\n",
-            "тесто: 300 гр\n",
-            "лимон: 3 шт\n",
-            "вода: 600 мл\n",
-            "сахар: 30 гр\n",
-            "лайм: 60 гр\n"
+            "Сыр: 210 гр\n",
+            "Томаты: 6 шт\n",
+            "Огурцы: 60 гр\n",
+            "Маслины: 30 гр\n",
+            "Оливковое масло: 60 мл\n",
+            "Салат: 30 гр\n",
+            "Перец: 60 гр\n",
+            "Колбаса: 90 гр\n",
+            "Бекон: 90 гр\n",
+            "Оливки: 30 гр\n",
+            "Томаты: 60 гр\n",
+            "Тесто: 300 гр\n",
+            "Лимон: 3 шт\n",
+            "Вода: 600 мл\n",
+            "Сахар: 30 гр\n",
+            "Лайм: 60 гр\n"
           ],
           "name": "stdout"
         }
