Доделано дз по классам

--- a/python_classes/python_classes.ipynb
+++ b/python_classes/python_classes.ipynb
@@ -130,6 +130,118 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Задание 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Employee:\n",
+    "    def __init__(self, name, seniority):\n",
+    "        self.name = name\n",
+    "        self.seniority = seniority\n",
+    "        \n",
+    "        self.grade = 1\n",
+    "    \n",
+    "    def grade_up(self):\n",
+    "        \"\"\"Повышает уровень сотрудника\"\"\"\n",
+    "        self.grade += 1\n",
+    "    \n",
+    "    def publish_grade(self):\n",
+    "        \"\"\"Публикация результатов аккредитации сотрудников\"\"\"\n",
+    "        print(self.name, self.grade)\n",
+    "    \n",
+    "    def check_if_it_is_time_for_upgrade(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Developer(Employee):\n",
+    "    def __init__(self, name, seniority):\n",
+    "        super().__init__(name, seniority)\n",
+    "    \n",
+    "    def check_if_it_is_time_for_upgrade(self):\n",
+    "        # для каждой аккредитации увеличиваем счетчик на 1\n",
+    "        # пока считаем, что все разработчики проходят аккредитацию\n",
+    "        self.seniority += 1\n",
+    "        \n",
+    "        # условие повышения сотрудника из презентации\n",
+    "        if self.seniority % 5 == 0:\n",
+    "            self.grade_up()\n",
+    "        \n",
+    "        # публикация результатов\n",
+    "        return self.publish_grade()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Designer(Employee):\n",
+    "    def __init__(self, name):\n",
+    "        super().__init__(name, 0)\n",
+    "        self.points = 4\n",
+    "    \n",
+    "    def add_award(self):\n",
+    "        self.points += 2\n",
+    "        if self.points >= 7:\n",
+    "            self.grade += 1\n",
+    "            self.points -= 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oleg 1\n",
+      "oleg 2\n",
+      "oleg 2\n",
+      "oleg 2\n",
+      "oleg 3\n",
+      "oleg 3\n",
+      "oleg 3\n",
+      "oleg 3\n",
+      "oleg 4\n",
+      "oleg 4\n",
+      "oleg 4\n",
+      "oleg 5\n",
+      "oleg 5\n",
+      "oleg 5\n",
+      "oleg 5\n",
+      "oleg 6\n",
+      "oleg 6\n",
+      "oleg 6\n",
+      "oleg 7\n",
+      "oleg 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "oleg = Designer('oleg')\n",
+    "for i in range(20):\n",
+    "    oleg.add_award()\n",
+    "    oleg.publish_grade()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
